--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TestSettings>.\src\Local.testsettings</TestSettings>
     <ScenarioTestDebug>.\src\Common\Commands.ScenarioTest\bin\Debug\Microsoft.WindowsAzure.Commands.ScenarioTest.dll</ScenarioTestDebug>
+	<CommonTestDebug>.\src\Common\Commands.Common.Test\bin\Debug\Microsoft.WindowsAzure.Commands.Common.Test.dll</CommonTestDebug>
     <AzureRTTestSettings>.\src\AzureRT.testsettings</AzureRTTestSettings>
     <AzureRTTestContainer>.\src\ServiceManagement\Compute\Commands.ServiceManagement.Test\bin\Debug\Microsoft.WindowsAzure.Commands.ServiceManagement.Test.dll</AzureRTTestContainer>
     <StorageScenarioTestDebug>src\ServiceManagement\Storage\Commands.Storage.ScenarioTest\bin\Debug\CLITest.dll</StorageScenarioTestDebug>
@@ -93,6 +94,12 @@
     <MSBuild Targets="InvokeMSTest"
       Properties="_testAssembly=$(StorageScenarioTestDebug);_testSettings=$(TestSettings);_testFilter=$(ScenarioTestFilter);_testResult=$(TestOutputDirectory)\StorageScenarioTestDebug.trx"
       Projects="build.proj"/>
+  </Target>
+  
+  <!-- Run the common tests -->
+  <Target Name="CommonTests">
+    <Message Importance="high" Text="Running Common tests" />
+	<Xunit.Runner.MSBuild.xunit Assembly="$(CommonTestDebug)" Html="$(TestOutputDirectory)\CommonTests.xunit.dll.html" Verbose="true"/>
   </Target>
 
   <!-- Run the scenario tests with Mocks -->
