--- a/src/ResourceManager/Sql/Commands.Sql.Tests/packages.config
+++ b/src/ResourceManager/Sql/Commands.Sql.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hydra.HttpRecorder" version="1.0.5333.20807-prerelease" targetFramework="net45" />
+  <package id="Hydra.SpecTestSupport" version="1.0.5333.20807-prerelease" targetFramework="net45" />
   <package id="Microsoft.Azure.Gallery" version="2.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.4.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Sql" version="0.11.0-prerelease" targetFramework="net45" />
@@ -7,6 +9,7 @@
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.7.10707.1513-rc" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common" version="1.3.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.0" targetFramework="net45" />
