--- a/src/Common/Commands.Common/Commands.Common.csproj
+++ b/src/Common/Commands.Common/Commands.Common.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Authentication\LoginType.cs" />
     <Compile Include="Authentication\RegistryBackedDictionary.cs" />
     <Compile Include="Authentication\UserTokenProvider.cs" />
+    <Compile Include="Common\ProfileClientExtensions.cs" />
     <Compile Include="Common\AzurePowerShell.cs" />
     <Compile Include="Common\AzurePowerShellClientFactory.cs" />
     <Compile Include="Common\ProfileClient.cs" />
@@ -190,6 +191,7 @@
     <Compile Include="Models\AzureSubscription.Methods.cs" />
     <Compile Include="Models\AzureContext.cs" />
     <Compile Include="Models\JsonProfileSerializer.cs" />
+    <Compile Include="Common\PSAzureAccount.cs" />
     <Compile Include="Models\XmlProfileSerializer.cs" />
     <Compile Include="Models\AzureSubscription.cs" />
     <Compile Include="Models\ClientTraceEventArgs.cs" />
